Kubernetes/Practice/1-subodh/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-con-01
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: ubuntu
        image: ubuntu
        command: ["sleep 5000"]
        ports:
        - containerPort: 80
      - name: busybox
        image: busybox
        command: ["/bin/sh", "-c", 'touch /tmp/deployment/multi-con-01.txt' ]
                 
        volumeMounts:
        - name: vol
          mountPath: /tmp/deployment 

      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: myclaim
